--- a/rapid/rapid.csproj
+++ b/rapid/rapid.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <DotNetCliToolReference Include="dotnet.script" Version="0.22.0" />
+
+  </ItemGroup>
 </Project>
