--- a/rgen/rgen.csproj
+++ b/rgen/rgen.csproj
@@ -9,4 +9,8 @@
     <DotNetCliToolReference Include="dotnet.script" Version="0.22.0" />
 
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="System.Runtime.Caching" Version="5.0.0" />
+  </ItemGroup>
 </Project>
